script file in html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
           </fieldset>
           </section>
-
+          
       </main>
 
       <div class="bottom-info">
@@ -200,6 +200,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByfb1772xU2RBST9Qs39XiHw7JekTR5sA&callback=initMap"> </script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
         integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
     <script src="assets/script.js"></script>
