--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </section>
           
       </main>
-
+      <div id="map"></div>
       <div class="bottom-info">
         <h2>555-555-5555</h2>
         <h2><a href="mailto:ryanbairdchilders@gmail.com">ryanbairdchilders@gmail.com</a></h2>
