--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         </div>
       </nav>
 
+      <header class="title">
+        <h1>Samurai Restaurant Finder</h1>
+      </header>
+
       <main>
         
 
