added next and previous button

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
             </div>
           </div>
 
+          <div class="next-button">
+          <a href="#" class="previous">&laquo; Previous</a>
+<a href="#" class="next">Next &raquo;</a>
+
+<a href="#" class="previous round">&#8249;</a>
+<a href="#" class="next round">&#8250;</a>
+</div>
+
           <section>
             <fieldset class="choices" id="features">
               <legend>Choose your Restaurant features:</legend>
@@ -167,6 +175,10 @@
               <div>
                 <input type="checkbox" id="vegetarian" name="vegetarian">
                 <label for="vegetarian">Vegetarian</label>
+              </div>
+              <div>
+                <input type="checkbox" id="kid-friendly" name="kid-friendly">
+                <label for="kid-friendly">Kid Friendly</label>
               </div>
             </div>
             <div>
