--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-    <title>Samurai Home Buyer</title>
+  <title>Samurai Home Buyer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -228,7 +228,7 @@
     <div id="map"></div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByfb1772xU2RBST9Qs39XiHw7JekTR5sA&callback=initMap"> </script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC26fo-Rjw5nL4R5MTQMgqTRw7rJaP1xRg&libraries=places&callback=initMap"> </script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
         integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
     <script src="assets/script.js"></script>
