added restuarant picture for background

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
   </header>
 
   <main>
+    <div><img id="back-img" src= "assets/restuarant.jpg" alt="a picture of a restaurant"></div>
     <div class="card-container"></div>
 
 
