--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
   <div id="map"></div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC26fo-Rjw5nL4R5MTQMgqTRw7rJaP1xRg&libraries=places&callback=initMap"> </script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC26fo-Rjw5nL4R5MTQMgqTRw7rJaP1xRg&libraries=places&callback=initMap"> </script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
   <script src="assets/script.js"></script>
